--- a/model1-fc/fc_gpu.ipynb
+++ b/model1-fc/fc_gpu.ipynb
@@ -640,7 +640,7 @@
    "source": [
     "simulator = qiskit.Aer.get_backend('qasm_simulator')\n",
     "\n",
-    "circuit = QuantumCircuit(1, simulator, 100)\n",
+    "circuit = QuantumCircuit(1, si-mulator, 100)\n",
     "print('Expected value for rotation pi {}'.format(circuit.run([np.pi])[0]))\n",
     "circuit._circuit.draw('mpl')"
    ]
